5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4427/executions/1594_1800.log
== TEST (2019-04-25 16:01:01) 
-- CODE:
#Leia as variáveis
a=int(input("entre com o dado a: "))
b=int(input("entre com o dado b: "))
c=int(input("entre com o dado c: "))

print a
print b
print c
-- ERROR:
File "XXXX", line 6
    print a
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(a)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:06:20) 
-- CODE:
#Leia as variáveis
a=int(input("entre com o dado a: "))
b=int(input("entre com o dado b: "))
c=int(input("entre com o dado c: "))

x=((a**2)+(b**2)+(c**2))/(a+b+c)

print(x)

-- OUTPUT:
25.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:07:09) 
-- CODE:
#Leia as variáveis
a=int(input("entre com o dado a: "))
b=int(input("entre com o dado b: "))
c=int(input("entre com o dado c: "))

x=((a**2)+(b**2)+(c**2))/(a+b+c)

print(round (x,7)

-- ERROR:
File "XXXX", line 9
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:07:19) 
-- CODE:
#Leia as variáveis
a=int(input("entre com o dado a: "))
b=int(input("entre com o dado b: "))
c=int(input("entre com o dado c: "))

x=((a**2)+(b**2)+(c**2))/(a+b+c)

print(round (x,7)
-- ERROR:
File "XXXX", line 9
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:07:26) 
-- CODE:
#Leia as variáveis
a=int(input("entre com o dado a: "))
b=int(input("entre com o dado b: "))
c=int(input("entre com o dado c: "))

x=((a**2)+(b**2)+(c**2))/(a+b+c)

print(round (x,7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 23:58:43) 
-- CODE:
#Leia as variáveis
a=int(input("entre com o dado a: "))
b=int(input("entre com o dado b: "))
c=int(input("entre com o dado c: "))

x=((a**2)+(b**2)+(c**2))/(a+b+c)

print(round (x,7))
-- EXECUTION TIME:
0.234224
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
